feat: responseFormatters and types
