# src/types.ts
@@ -1,0 +1,20 @@
+export interface NFT {
+  contract: {
+    address: string;
+    name: string;
+  };
+  tokenType: string;
+  tokenId: string;
+  rawMetadata: {
+    image: string;
+  };
+  balance: number;
+}
+
+export interface Owner {
+  ownerAddress: string;
+  tokenBalances: {
+    tokenId: string;
+    balance: number;
+  }[];
+}
